[package]
name = "pb_schedule"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.25", default-features = false, features = ["glow"] }
egui = "0.25"
image = "0.24"

winapi = { version = "0.3", features = ["winuser"] }

reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
scraper = "0.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
anyhow = "1.0"
